[gd_scene load_steps=2 format=3 uid="uid://ba8dac4vv3ldm"]

[ext_resource type="Script" uid="uid://c8oydxs6cqccf" path="res://scripts/ui/save_game_panel.gd" id="1_5q7vf"]

[node name="SaveGamePanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5q7vf")

[node name="confirm_delete_dialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="slots_container" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(870, 0)
layout_mode = 2
